# music-daemon

./: Cargo.toml  README.org
daemon/: Cargo.toml
daemon/src/: main.rs
web/: Cargo.toml  Rocket.toml
web/assets/: style.css
web/src/: main.rs
